@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -75,9 +74,9 @@ class AutoDeploymentIT {
   }
 
   void createBPMNFile(String path, String processDefinitionId) throws IOException {
-    Path resourcesDir = Paths.get(baseDirectory, SpringBootManagedContainer.RESOURCES_PATH, path);
+    Path resourcesDir = Path.of(baseDirectory, SpringBootManagedContainer.RESOURCES_PATH, path);
     resourcesDir.toFile().mkdirs();
-    File bpmnFile = Paths.get(resourcesDir.toString(), "process.bpmn").toFile();
+    File bpmnFile = Path.of(resourcesDir.toString(), "process.bpmn").toFile();
     bpmnFile.createNewFile();
 
     BpmnModelInstance model = Bpmn.createExecutableProcess(processDefinitionId)
@@ -121,10 +120,10 @@ class AutoDeploymentIT {
     // given
     InputStream formFile = AutoDeploymentIT.class.getClassLoader().getResourceAsStream("deployment/form.html");
     InputStream  scriptFile = AutoDeploymentIT.class.getClassLoader().getResourceAsStream("deployment/script.js");
-    File resourcesDirectory = Paths.get(baseDirectory, "configuration", "resources").toFile();
+    File resourcesDirectory = Path.of(baseDirectory, "configuration", "resources").toFile();
     resourcesDirectory.mkdirs();
-    Files.copy(formFile, Paths.get(resourcesDirectory.getAbsolutePath(), "form.html"));
-    Files.copy(scriptFile, Paths.get(resourcesDirectory.getAbsolutePath(), "script.js"));
+    Files.copy(formFile, Path.of(resourcesDirectory.getAbsolutePath(), "form.html"));
+    Files.copy(scriptFile, Path.of(resourcesDirectory.getAbsolutePath(), "script.js"));
 
     // when
     runStartScript();
